# SF_Tree_Identifier

./: .gitignore  README.md  benchmarks.csv  mapped_species.csv  non_vs_partial.txt  perf1.prof  pyproject.toml  requirements.txt  species_urls.csv  species_urls_token_match.csv
archive/: url_finder_high_weight.csv  url_finder_partial.csv
dev/: add_primary_key.py  addresses.json  brotherhood.csv  species_dict.pkl
dev/db_creation/: clean_data.py  data_cleaning.py  make_address_dict.py  make_tree_table.py
dev/deprecated/: identify_trees.py
dev/tests/: db_speed_test.py  sf_address_test.py  url_finder_test.py
dev/url_finder/: url_finder.py
notebooks/: Untitled1.ipynb  data_cleaning.ipynb  fuzz_testing.ipynb  identifier_output.ipynb  split_address_db.ipynb  table_making.ipynb  tree_dict_creation.ipynb  tree_dict_test.json  tree_dict_test.pkl
performance/: benchmarks.csv  performance_testing.py
performance/profiles/: 1204_19th_St_2022-12-01T11-26.prof  1204_19th_St_2022-12-08T18-51.prof  1204_19th_St_2022-12-08T19-08.prof  1204_19th_St_2022-12-08T21-01.prof  1204_19th_St_2022-12-08T21-28.prof  1204_19th_St_2022-12-08T21-59.prof  1204_19th_St_2022-12-22T11-18.prof  1204_19th_St_2022-12-22T11-20.prof  1204_19th_St_2022-12-23T19-55.prof  1204_19th_St_2022-12-25T19-54.prof  1204_19th_St_2022-12-25T20-05.prof  1204_19th_St_2023-01-05T12-01.prof  1468_Valencia_St_2022-12-01T11-00.prof  1468_Valencia_St_2022-12-01T11-05.prof  1468_Valencia_St_2022-12-01T11-11.prof  1468_Valencia_St_2022-12-01T11-24.prof  1468_Valencia_St_2022-12-08T18-49.prof  1468_Valencia_St_2022-12-08T19-07.prof  1468_Valencia_St_2022-12-08T21-01.prof  1468_Valencia_St_2022-12-08T21-28.prof  1468_Valencia_St_2022-12-08T21-59.prof  1468_Valencia_St_2022-12-22T11-18.prof  1468_Valencia_St_2022-12-22T11-20.prof  1468_Valencia_St_2022-12-23T19-55.prof  (+51 more)
tests/: Address_test.py  match_method_testing.py  performance_testing.py  sf_address_testing.py  tree_identifier_test.py  url_finder_test.py
(+12 files in other folders)
